<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_right_shezhi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_group_chat"
        android:orderInCategory="100"
        android:title="@string/action_group_chat"
        android:icon="@drawable/ic_right_qunliao"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_friends"
        android:orderInCategory="100"
        android:title="添加朋友"
        android:icon="@drawable/ic_right_tianjiapengyou"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        android:icon="@drawable/ic_right_biaoqing"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        android:icon="@drawable/ic_right_bangzhuyufankui"
        app:showAsAction="never" />
</menu>
